--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 <body class="back ">
     <script src="script.js"></script>
 <div>
-     <div class="bar rounded" style="margin-bottom: 80px">
+     <div class="bar rounded" style="margin-bottom: 50px">
         <div class="ms-3">
             <nav id="navbar" class="fw-bold navbar navbar-dark navbar-expand-md">
                 <a class="navbar-brand" href="#">
@@ -60,13 +60,15 @@
                     <img src="/png-transparent-tiktok-tiktok-logo-tiktok-icon-thumbnail.png" alt="Youtube" style="height: 25px;">
                 </button>
             </div>
-            <h5>
-                
-                Web Developer from Philippines
-                with rich experience in web development
-                and building website from scratch.  
-                
-            </h5>
+            <div class="col-12">
+                <div class="col-6">
+                    <h5>                    
+                        Web Developer from Philippines
+                        with rich experience in web development
+                        and building website from scratch.                 
+                    </h5>
+                </div>
+            </div>
         </div>
         <div style="overflow: hidden; width: 20%;" class="d-flex container col-2 col-sm-4  animated-image rounded-circle">
             <img id="prof" src="/431019694_3819668394920656_1421125926404645861_n.png" class="h-auto img-fluid shad">
