--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
                 <a class="navbar-brand" href="#">
                     <img style="height: 50px;" src="/pngwing.com.png"></img>
                 </a>
-                    <button class="btn-warning navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+                    <button style="margin-right: 10px;" class="btn-warning navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
                         <span class="navbar-toggler-icon"></span>
                     </button>
                 <div  class="align-self-end justify-content-end p-3 collapse navbar-collapse" id="navbarNav">
