--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
                 </button>
             </div>
             <div class="col-12">
-                <div class="col-6">
+                <div class="col-12 col-sm-6">
                     <h5>                    
                         Web Developer from Philippines
                         with rich experience in web development
