--- a/index.html
+++ b/index.html
@@ -54,10 +54,10 @@
             <h4 style="font-style: italic" class="fyellow">Front-End Web Developer</h4>
             <div class="col- col-sm-3 ">
                 <button id="utube" class="scalehover" style="border-radius: 15px; background-color: transparent;">
-                    <img src="/Youtube_logo.png" alt="Youtube" style="height: 25px;">
+                    <img src="/logo/utube.svg" alt="Youtube" style="height: 25px;">
                 </button>
                 <button id="tiktok" class="scalehover mb-3" style="border-radius: 15px; background-color: transparent;">
-                    <img src="/png-transparent-tiktok-tiktok-logo-tiktok-icon-thumbnail.png" alt="Youtube" style="height: 25px;">
+                    <img src="/logo/tiktok.svg" alt="Youtube" style="height: 25px;">
                 </button>
             </div>
             <div class="col-12">
